.vscode/dryrun.log
make --dry-run --always-make --keep-going --print-directory
make: Entering directory '/home/jeremy/waves'
 
src/plotSine.cpp:125:2: error: #endif without #if
  125 | #endif // __PLOTSINE_H__
      |  ^~~~~

g++ -std=c++11 -Wall -o obj/fourier.o -c src/fourier.cpp
g++ -std=c++11 -Wall -o obj/main.o -c src/main.cpp
g++ -std=c++11 -Wall -o obj/parseJSON.o -c src/parseJSON.cpp
g++ -std=c++11 -Wall -o obj/plotSine.o -c src/plotSine.cpp
g++ -std=c++11 -Wall -o Solar_Sinusoid_Rythym obj/fourier.o obj/main.o obj/parseJSON.o obj/plotSine.o -lncurses 'wx/wx.h'
make: Leaving directory '/home/jeremy/waves'
 
